// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`get_overview summarizes a freshly created score 1`] = `
{
  "content": [
    {
      "text": 
"Test Tune by Test Composer
Key: E♭/Cm | Time: 4/4 | Tempo: 160 bpm | Bars: 32
Instruments:
  1. Tenor Saxophone"
,
      "type": "text",
    },
  ],
}
`;

exports[`get_overview lists every instrument 1`] = `
{
  "content": [
    {
      "text": 
"Test Tune by Test Composer
Key: E♭/Cm | Time: 4/4 | Tempo: 160 bpm | Bars: 32
Instruments:
  1. Tenor Saxophone
  2. Piano"
,
      "type": "text",
    },
  ],
}
`;

exports[`get_overview summarizes example sheet 1`] = `
{
  "content": [
    {
      "text": 
"Simple Lead Sheet by Test Composer
Key: B♭/Gm | Time: 4/4 | Tempo: 132 bpm | Bars: 8
Instruments:
  1. Tenor Saxophone"
,
      "type": "text",
    },
  ],
}
`;
